Cleaned up documentation for the Persistence.py file

--- a/doc/latex/index.tex
+++ b/doc/latex/index.tex
@@ -59,6 +59,10 @@ Again, this is the developer version of the installation. Eventually, we will wa
 \end{DoxyCode}
 
 
+\section*{Documentation }
+
+Documentation is done using \href{http://www.doxygen.org}{\tt doxygen}. Documentation can be found in the \href{https://gitlab.msu.edu/TSAwithTDA/teaspoon/doc/html/index.html}{\tt doc folder}. Further info can be found in the https\+://gitlab.msu.\+edu/\+T\+S\+Awith\+T\+D\+A/teaspoon/blob/master/\+C\+O\+N\+T\+R\+I\+B\+U\+T\+I\+NG.md \char`\"{}contributing\char`\"{} page.
+
 \section*{Contributing }
 
 See the https\+://gitlab.msu.\+edu/\+T\+S\+Awith\+T\+D\+A/teaspoon/blob/master/\+C\+O\+N\+T\+R\+I\+B\+U\+T\+I\+NG.md \char`\"{}contributing\char`\"{} page for more information on workflows. 
