--- a/doc/latex/refman.tex
+++ b/doc/latex/refman.tex
@@ -143,6 +143,10 @@
 \label{md_CONTRIBUTING}
 \hypertarget{md_CONTRIBUTING}{}
 \input{md_CONTRIBUTING}
+\chapter{Todo List}
+\label{todo}
+\hypertarget{todo}{}
+\input{todo}
 \chapter{Namespace Index}
 \input{namespaces}
 \chapter{Namespace Documentation}
