--- a/doc/latex/namespaces.tex
+++ b/doc/latex/namespaces.tex
@@ -3,5 +3,5 @@ Here are the packages with brief descriptions (if available)\+:\begin{DoxyCompac
 \item\contentsline{section}{\hyperlink{namespaceteaspoon_1_1_make_data_1_1_point_cloud}{teaspoon.\+Make\+Data.\+Point\+Cloud} }{\pageref{namespaceteaspoon_1_1_make_data_1_1_point_cloud}}{}
 \item\contentsline{section}{\hyperlink{namespaceteaspoon_1_1_t_d_a_1_1_distance}{teaspoon.\+T\+D\+A.\+Distance} }{\pageref{namespaceteaspoon_1_1_t_d_a_1_1_distance}}{}
 \item\contentsline{section}{\hyperlink{namespaceteaspoon_1_1_t_d_a_1_1_draw}{teaspoon.\+T\+D\+A.\+Draw} }{\pageref{namespaceteaspoon_1_1_t_d_a_1_1_draw}}{}
-\item\contentsline{section}{\hyperlink{namespaceteaspoon_1_1_t_d_a_1_1_persistence}{teaspoon.\+T\+D\+A.\+Persistence} }{\pageref{namespaceteaspoon_1_1_t_d_a_1_1_persistence}}{}
+\item\contentsline{section}{\hyperlink{namespaceteaspoon_1_1_t_d_a_1_1_persistence}{teaspoon.\+T\+D\+A.\+Persistence} \\*Wrapper for using various fast persistence software inside of python }{\pageref{namespaceteaspoon_1_1_t_d_a_1_1_persistence}}{}
 \end{DoxyCompactList}
