--- a/doc/latex/namespaceteaspoon_1_1_t_d_a_1_1_persistence.tex
+++ b/doc/latex/namespaceteaspoon_1_1_t_d_a_1_1_persistence.tex
@@ -1,14 +1,18 @@
 \hypertarget{namespaceteaspoon_1_1_t_d_a_1_1_persistence}{}\section{teaspoon.\+T\+D\+A.\+Persistence Namespace Reference}
 \label{namespaceteaspoon_1_1_t_d_a_1_1_persistence}\index{teaspoon.\+T\+D\+A.\+Persistence@{teaspoon.\+T\+D\+A.\+Persistence}}
+
+
+Wrapper for using various fast persistence software inside of python.  
+
+
 \subsection*{Functions}
 \begin{DoxyCompactItemize}
 \item 
-def {\bfseries test\+Command} ()\hypertarget{namespaceteaspoon_1_1_t_d_a_1_1_persistence_acc283535d8596af92ab1e7e9455d09b2}{}\label{namespaceteaspoon_1_1_t_d_a_1_1_persistence_acc283535d8596af92ab1e7e9455d09b2}
+def {\bfseries prepare\+Folders} ()\hypertarget{namespaceteaspoon_1_1_t_d_a_1_1_persistence_aa767596a9f61323ef4e489e42890cd45}{}\label{namespaceteaspoon_1_1_t_d_a_1_1_persistence_aa767596a9f61323ef4e489e42890cd45}
 
 \item 
-def \hyperlink{namespaceteaspoon_1_1_t_d_a_1_1_persistence_aa767596a9f61323ef4e489e42890cd45}{prepare\+Folders} ()
-\item 
-def \hyperlink{namespaceteaspoon_1_1_t_d_a_1_1_persistence_a3d273210437e69be2df595ed1751c661}{read\+Perseus\+Output} (output\+File\+Name)
+def {\bfseries read\+Perseus\+Output} (output\+File\+Name)\hypertarget{namespaceteaspoon_1_1_t_d_a_1_1_persistence_a3d273210437e69be2df595ed1751c661}{}\label{namespaceteaspoon_1_1_t_d_a_1_1_persistence_a3d273210437e69be2df595ed1751c661}
+
 \item 
 def {\bfseries read\+Ripser\+String} (s)\hypertarget{namespaceteaspoon_1_1_t_d_a_1_1_persistence_a862eea03c953145bb9290c1681f1f850}{}\label{namespaceteaspoon_1_1_t_d_a_1_1_persistence_a862eea03c953145bb9290c1681f1f850}
 
@@ -17,43 +21,56 @@ def {\bfseries read\+Ripser\+Output} (out)\hypertarget{namespaceteaspoon_1_1_t_d
 
 \item 
 def \hyperlink{namespaceteaspoon_1_1_t_d_a_1_1_persistence_ae38f90d312da5c7fb8587a2f44e67b8a}{V\+R\+\_\+\+Ripser} (P, max\+Dim=1)
-\item 
-def \hyperlink{namespaceteaspoon_1_1_t_d_a_1_1_persistence_a074e092c57bca5b1652c7b2a2c41f603}{write\+Point\+Cloud\+File\+For\+Perseus} (P, filename, step\+Size=.\+1, num\+Steps=500)
-\item 
-def \hyperlink{namespaceteaspoon_1_1_t_d_a_1_1_persistence_ae3954f45636c5f88b8e7cb7b422eea3d}{V\+R\+\_\+\+Perseus} (P, dim=1, max\+Radius=3, num\+Steps=100, step\+Size=None, suppress\+Output=True)
-\item 
-def \hyperlink{namespaceteaspoon_1_1_t_d_a_1_1_persistence_a5d253547a9b956b8d5169808f31b42d2}{dist\+Mat\+\_\+\+Ripser} (dist\+Mat, max\+Dim=1)
-\item 
-def {\bfseries dist\+Mat\+\_\+\+Perseus} ()\hypertarget{namespaceteaspoon_1_1_t_d_a_1_1_persistence_a0660fcd00ca57001f21bfaaefb1da9c3}{}\label{namespaceteaspoon_1_1_t_d_a_1_1_persistence_a0660fcd00ca57001f21bfaaefb1da9c3}
+\begin{DoxyCompactList}\small\item\em Computes persistence up to dimension max\+Dim using Uli Bauer\textquotesingle{}s Ripser. \end{DoxyCompactList}\item 
+def {\bfseries write\+Point\+Cloud\+File\+For\+Perseus} (P, filename, step\+Size=.\+1, num\+Steps=500)\hypertarget{namespaceteaspoon_1_1_t_d_a_1_1_persistence_a074e092c57bca5b1652c7b2a2c41f603}{}\label{namespaceteaspoon_1_1_t_d_a_1_1_persistence_a074e092c57bca5b1652c7b2a2c41f603}
 
 \item 
-def \hyperlink{namespaceteaspoon_1_1_t_d_a_1_1_persistence_a7ee47776929d1ade75b059415918a328}{write\+Matrix\+File\+For\+Perseus} (M, filesavename)
+def \hyperlink{namespaceteaspoon_1_1_t_d_a_1_1_persistence_ae3954f45636c5f88b8e7cb7b422eea3d}{V\+R\+\_\+\+Perseus} (P, dim=1, max\+Radius=3, num\+Steps=100, step\+Size=None, suppress\+Output=True)
+\begin{DoxyCompactList}\small\item\em Does brips version of perseus. \end{DoxyCompactList}\item 
+def \hyperlink{namespaceteaspoon_1_1_t_d_a_1_1_persistence_a5d253547a9b956b8d5169808f31b42d2}{dist\+Mat\+\_\+\+Ripser} (dist\+Mat, max\+Dim=1)
+\begin{DoxyCompactList}\small\item\em Computes persistence up to max\+Dim using Uli Bauer\textquotesingle{}s \href{https://github.com/Ripser/ripser}{\tt Ripser}. \end{DoxyCompactList}\item 
+def \hyperlink{namespaceteaspoon_1_1_t_d_a_1_1_persistence_a0660fcd00ca57001f21bfaaefb1da9c3}{dist\+Mat\+\_\+\+Perseus} ()
+\item 
+def {\bfseries write\+Matrix\+File\+For\+Perseus} (M, filesavename)\hypertarget{namespaceteaspoon_1_1_t_d_a_1_1_persistence_a7ee47776929d1ade75b059415918a328}{}\label{namespaceteaspoon_1_1_t_d_a_1_1_persistence_a7ee47776929d1ade75b059415918a328}
+
 \item 
 def \hyperlink{namespaceteaspoon_1_1_t_d_a_1_1_persistence_aa583aa9a694aeaa3983e77319ac68e84}{Cubical\+\_\+\+Perseus} (M, num\+Digits=2, suppress\+Output=True)
+\begin{DoxyCompactList}\small\item\em Computes persistence for a matrix of function values using Vidit Nanda\textquotesingle{}s \href{http://people.maths.ox.ac.uk/nanda/perseus/index.html}{\tt perseus}. \end{DoxyCompactList}\end{DoxyCompactItemize}
+\subsection*{Variables}
+\begin{DoxyCompactItemize}
+\item 
+list \hyperlink{namespaceteaspoon_1_1_t_d_a_1_1_persistence_a5d89c08933153d3fea60fd71e9e16800}{folders} = \mbox{[}\textquotesingle{}.teaspoon\+Data\textquotesingle{},\textquotesingle{}.teaspoon\+Data/input\textquotesingle{},\textquotesingle{}.teaspoon\+Data/output\textquotesingle{}\mbox{]}
+\begin{DoxyCompactList}\small\item\em Checks that necessary folder structure system exists. \end{DoxyCompactList}\item 
+{\bfseries files} = glob.\+glob(path)\hypertarget{namespaceteaspoon_1_1_t_d_a_1_1_persistence_ad1e9deccaa1b4485ba18e22b81101f09}{}\label{namespaceteaspoon_1_1_t_d_a_1_1_persistence_ad1e9deccaa1b4485ba18e22b81101f09}
+
+\item 
+\hyperlink{namespaceteaspoon_1_1_t_d_a_1_1_persistence_ae41c85513e98b32d96c75124929c4d2c}{output\+Files} = glob.\+glob(output\+File\+Name + \textquotesingle{}$\ast$\textquotesingle{})
+\begin{DoxyCompactList}\small\item\em Reads in the diagrams in the format that Perseus uses. \end{DoxyCompactList}\item 
+dictionary {\bfseries Dgms} = \{\}\hypertarget{namespaceteaspoon_1_1_t_d_a_1_1_persistence_a23124e4420ddc7cc2be201af0d46f384}{}\label{namespaceteaspoon_1_1_t_d_a_1_1_persistence_a23124e4420ddc7cc2be201af0d46f384}
+
+\item 
+{\bfseries dim} = int( f\mbox{[}len(output\+File\+Name) + 1\+:-\/4\mbox{]} )\hypertarget{namespaceteaspoon_1_1_t_d_a_1_1_persistence_a401a006d9a9151a63298278d463f7973}{}\label{namespaceteaspoon_1_1_t_d_a_1_1_persistence_a401a006d9a9151a63298278d463f7973}
+
+\item 
+{\bfseries Dgm} = np.\+loadtxt(f)\hypertarget{namespaceteaspoon_1_1_t_d_a_1_1_persistence_ad755079d8b56f84312c5e4f23db15f19}{}\label{namespaceteaspoon_1_1_t_d_a_1_1_persistence_ad755079d8b56f84312c5e4f23db15f19}
+
 \end{DoxyCompactItemize}
 
 
 \subsection{Detailed Description}
-\begin{DoxyVerb}Created July 6, 2017
-Liz Munch
-muncheli@msu.edu
+Wrapper for using various fast persistence software inside of python. 
 
+All diagrams are stored as a 2xN numpy matrix. When a code returns multiple dimensions, these are returned as a dictionary 
+\begin{DoxyCode}
+1 \{
+2     0: DgmDimension0,
+3     1: DgmDimension1,
+4     ...
+5 \}
+\end{DoxyCode}
+ Infinite classes are given an entry of np.\+inf.
 
-Wrapper for using various fast persistence software inside of python.
-
-All diagrams are stored as a 2xN numpy matrix.
-When a code returns multiple dimensions, these are returned as a dictionary
-{
-0: DgmDimension0,
-1: DgmDimension1,
-...
-}
-Infinite classes are given an entry of np.inf.
-
-All data files are saved in a hidden folder .teaspoonData
-This folder is created if it doesn't already exist.
-Files are repeatedly emptied out of it, so do not save anything in it that you might want later!\end{DoxyVerb}
- 
+During computation, all data files are saved in a hidden folder \char`\"{}.\+teaspoon\+Data\char`\"{}. This folder is created if it doesn\textquotesingle{}t already exist. Files are repeatedly emptied out of it, so do not save anything in it that you might want later! 
 
 \subsection{Function Documentation}
 \index{teaspoon\+::\+T\+D\+A\+::\+Persistence@{teaspoon\+::\+T\+D\+A\+::\+Persistence}!Cubical\+\_\+\+Perseus@{Cubical\+\_\+\+Perseus}}
@@ -65,34 +82,43 @@ Files are repeatedly emptied out of it, so do not save anything in it that you m
 \item[{}]{suppress\+Output = {\ttfamily True}}
 \end{DoxyParamCaption}
 )}\hypertarget{namespaceteaspoon_1_1_t_d_a_1_1_persistence_aa583aa9a694aeaa3983e77319ac68e84}{}\label{namespaceteaspoon_1_1_t_d_a_1_1_persistence_aa583aa9a694aeaa3983e77319ac68e84}
-\begin{DoxyVerb}Computes persistence for a matrix of function values.
-Uses Vidit Nanda's perseus.
-Notes:
-- perseus must be in the bash path
-- matrix must be 2-dimensional
 
-TODO: Update this to accept higher dimensional cubical complexes
 
-Parameters
-----------
-M
-    a 2D numpy array
-numDigits
-    Perseus only accepts positive integer valued matrices.  To 
-    compensate, we apply the transformation 
-            x -> x* (10**numDigits) + M.min()
-    then calculate persistence on the resulting matrix.
-    The persistence diagram birth/death times are then converted
-    back via the inverse transform.
-suppressOutput
-    If true, gets rid of printed output from perseus.
+Computes persistence for a matrix of function values using Vidit Nanda\textquotesingle{}s \href{http://people.maths.ox.ac.uk/nanda/perseus/index.html}{\tt perseus}. 
 
-Outputs
--------
-Dgms
-    A dictionary with integer keys 0,1,...,N 
-    The key gives the dimension of the persistence diagram.\end{DoxyVerb}
- \index{teaspoon\+::\+T\+D\+A\+::\+Persistence@{teaspoon\+::\+T\+D\+A\+::\+Persistence}!dist\+Mat\+\_\+\+Ripser@{dist\+Mat\+\_\+\+Ripser}}
+\begin{DoxyRemark}{Remarks}
+
+\begin{DoxyItemize}
+\item perseus must be in the bash path
+\item matrix must be 2-\/dimensional
+\end{DoxyItemize}
+\end{DoxyRemark}
+\begin{DoxyRefDesc}{Todo}
+\item[\hyperlink{todo__todo000002}{Todo}]Update this to accept higher dimensional cubical complexes\end{DoxyRefDesc}
+
+
+
+\begin{DoxyParams}{Parameters}
+{\em M} & a 2D numpy array \\
+\hline
+{\em num\+Digits} & Perseus only accepts positive integer valued matrices. To compensate, we apply the transformation x -\/$>$ x$\ast$ (10$\ast$$\ast$num\+Digits) + M.\+min() then calculate persistence on the resulting matrix. The persistence diagram birth/death times are then converted back via the inverse transform. \\
+\hline
+{\em suppress\+Output} & If true, gets rid of printed output from perseus.\\
+\hline
+\end{DoxyParams}
+\begin{DoxyReturn}{Returns}
+A dictionary with integer keys 0,1,...,N The key gives the dimension of the persistence diagram. 
+\end{DoxyReturn}
+\index{teaspoon\+::\+T\+D\+A\+::\+Persistence@{teaspoon\+::\+T\+D\+A\+::\+Persistence}!dist\+Mat\+\_\+\+Perseus@{dist\+Mat\+\_\+\+Perseus}}
+\index{dist\+Mat\+\_\+\+Perseus@{dist\+Mat\+\_\+\+Perseus}!teaspoon\+::\+T\+D\+A\+::\+Persistence@{teaspoon\+::\+T\+D\+A\+::\+Persistence}}
+\subsubsection[{\texorpdfstring{dist\+Mat\+\_\+\+Perseus()}{distMat_Perseus()}}]{\setlength{\rightskip}{0pt plus 5cm}def teaspoon.\+T\+D\+A.\+Persistence.\+dist\+Mat\+\_\+\+Perseus (
+\begin{DoxyParamCaption}
+{}
+\end{DoxyParamCaption}
+)}\hypertarget{namespaceteaspoon_1_1_t_d_a_1_1_persistence_a0660fcd00ca57001f21bfaaefb1da9c3}{}\label{namespaceteaspoon_1_1_t_d_a_1_1_persistence_a0660fcd00ca57001f21bfaaefb1da9c3}
+\begin{DoxyRefDesc}{Todo}
+\item[\hyperlink{todo__todo000001}{Todo}]\end{DoxyRefDesc}
+\index{teaspoon\+::\+T\+D\+A\+::\+Persistence@{teaspoon\+::\+T\+D\+A\+::\+Persistence}!dist\+Mat\+\_\+\+Ripser@{dist\+Mat\+\_\+\+Ripser}}
 \index{dist\+Mat\+\_\+\+Ripser@{dist\+Mat\+\_\+\+Ripser}!teaspoon\+::\+T\+D\+A\+::\+Persistence@{teaspoon\+::\+T\+D\+A\+::\+Persistence}}
 \subsubsection[{\texorpdfstring{dist\+Mat\+\_\+\+Ripser(dist\+Mat, max\+Dim=1)}{distMat_Ripser(distMat, maxDim=1)}}]{\setlength{\rightskip}{0pt plus 5cm}def teaspoon.\+T\+D\+A.\+Persistence.\+dist\+Mat\+\_\+\+Ripser (
 \begin{DoxyParamCaption}
@@ -100,46 +126,24 @@ Dgms
 \item[{}]{max\+Dim = {\ttfamily 1}}
 \end{DoxyParamCaption}
 )}\hypertarget{namespaceteaspoon_1_1_t_d_a_1_1_persistence_a5d253547a9b956b8d5169808f31b42d2}{}\label{namespaceteaspoon_1_1_t_d_a_1_1_persistence_a5d253547a9b956b8d5169808f31b42d2}
-\begin{DoxyVerb}Computes persistence up to maxDim using Uli Bauer's Ripser
-Needs to be installed on machine in advance
-https://github.com/Ripser/ripser 
 
 
-Parameters
-----------
-distMat -
-    A distance matrix given as a NxN numpy array
-maxDim -
-    An integer representing the maximum dimension
-    for computing persistent homology
+Computes persistence up to max\+Dim using Uli Bauer\textquotesingle{}s \href{https://github.com/Ripser/ripser}{\tt Ripser}. 
 
-Returns
--------
-Dgms -  
-    A dictionary where Dgms[k] is a lx2 matrix 
-    giving points in the k-dimensional pers diagram\end{DoxyVerb}
- \index{teaspoon\+::\+T\+D\+A\+::\+Persistence@{teaspoon\+::\+T\+D\+A\+::\+Persistence}!prepare\+Folders@{prepare\+Folders}}
-\index{prepare\+Folders@{prepare\+Folders}!teaspoon\+::\+T\+D\+A\+::\+Persistence@{teaspoon\+::\+T\+D\+A\+::\+Persistence}}
-\subsubsection[{\texorpdfstring{prepare\+Folders()}{prepareFolders()}}]{\setlength{\rightskip}{0pt plus 5cm}def teaspoon.\+T\+D\+A.\+Persistence.\+prepare\+Folders (
-\begin{DoxyParamCaption}
-{}
-\end{DoxyParamCaption}
-)}\hypertarget{namespaceteaspoon_1_1_t_d_a_1_1_persistence_aa767596a9f61323ef4e489e42890cd45}{}\label{namespaceteaspoon_1_1_t_d_a_1_1_persistence_aa767596a9f61323ef4e489e42890cd45}
-\begin{DoxyVerb}Checks that necessary folder structure system exists.
-Empties out all previously saved files to avoid confusion.
-\end{DoxyVerb}
- \index{teaspoon\+::\+T\+D\+A\+::\+Persistence@{teaspoon\+::\+T\+D\+A\+::\+Persistence}!read\+Perseus\+Output@{read\+Perseus\+Output}}
-\index{read\+Perseus\+Output@{read\+Perseus\+Output}!teaspoon\+::\+T\+D\+A\+::\+Persistence@{teaspoon\+::\+T\+D\+A\+::\+Persistence}}
-\subsubsection[{\texorpdfstring{read\+Perseus\+Output(output\+File\+Name)}{readPerseusOutput(outputFileName)}}]{\setlength{\rightskip}{0pt plus 5cm}def teaspoon.\+T\+D\+A.\+Persistence.\+read\+Perseus\+Output (
-\begin{DoxyParamCaption}
-\item[{}]{output\+File\+Name}
-\end{DoxyParamCaption}
-)}\hypertarget{namespaceteaspoon_1_1_t_d_a_1_1_persistence_a3d273210437e69be2df595ed1751c661}{}\label{namespaceteaspoon_1_1_t_d_a_1_1_persistence_a3d273210437e69be2df595ed1751c661}
-\begin{DoxyVerb}Reads in the diagrams in the format that perseus uses.
-Returns a dictionary with integer keys representing the 
-dimension of each diagram.
-\end{DoxyVerb}
- \index{teaspoon\+::\+T\+D\+A\+::\+Persistence@{teaspoon\+::\+T\+D\+A\+::\+Persistence}!V\+R\+\_\+\+Perseus@{V\+R\+\_\+\+Perseus}}
+\begin{DoxyRemark}{Remarks}
+Ripser needs to be installed on machine in advance. This code doesn\textquotesingle{}t check for it\textquotesingle{}s existance.
+\end{DoxyRemark}
+
+\begin{DoxyParams}{Parameters}
+{\em dist\+Mat} & -\/ A distance matrix given as a NxN numpy array \\
+\hline
+{\em max\+Dim} & -\/ An integer representing the maximum dimension for computing persistent homology\\
+\hline
+\end{DoxyParams}
+\begin{DoxyReturn}{Returns}
+A dictionary Dgms where Dgms\mbox{[}k\mbox{]} is a lx2 matrix giving points in the k-\/dimensional pers diagram 
+\end{DoxyReturn}
+\index{teaspoon\+::\+T\+D\+A\+::\+Persistence@{teaspoon\+::\+T\+D\+A\+::\+Persistence}!V\+R\+\_\+\+Perseus@{V\+R\+\_\+\+Perseus}}
 \index{V\+R\+\_\+\+Perseus@{V\+R\+\_\+\+Perseus}!teaspoon\+::\+T\+D\+A\+::\+Persistence@{teaspoon\+::\+T\+D\+A\+::\+Persistence}}
 \subsubsection[{\texorpdfstring{V\+R\+\_\+\+Perseus(\+P, dim=1, max\+Radius=3, num\+Steps=100, step\+Size=\+None, suppress\+Output=\+True)}{VR_Perseus(P, dim=1, maxRadius=3, numSteps=100, stepSize=None, suppressOutput=True)}}]{\setlength{\rightskip}{0pt plus 5cm}def teaspoon.\+T\+D\+A.\+Persistence.\+V\+R\+\_\+\+Perseus (
 \begin{DoxyParamCaption}
@@ -151,38 +155,32 @@ dimension of each diagram.
 \item[{}]{suppress\+Output = {\ttfamily True}}
 \end{DoxyParamCaption}
 )}\hypertarget{namespaceteaspoon_1_1_t_d_a_1_1_persistence_ae3954f45636c5f88b8e7cb7b422eea3d}{}\label{namespaceteaspoon_1_1_t_d_a_1_1_persistence_ae3954f45636c5f88b8e7cb7b422eea3d}
-\begin{DoxyVerb}Does brips version of perseus.
+
+
+Does brips version of perseus. 
+
 Computes VR persitsence on points in Euclidean space.
 
-Warnings:
-1) Requires choice of maxRadius, numSteps, and/or stepSize. 
-   Bad choices will give junk results.
-2) TODO: This appears to spit out radius rather than diameter
-   persistence computations.  Need to figure this out and 
-   make the choice uniform across outputs.
+\begin{DoxyRemark}{Remarks}
+1) Requires choice of max\+Radius, num\+Steps, and/or step\+Size. Bad choices will give junk results. 2) T\+O\+DO\+: This appears to spit out radius rather than diameter persistence computations. Need to figure this out and make the choice uniform across outputs.
+\end{DoxyRemark}
 
-
-Parameters
-----------
-P
-    An NxD array.  Represents N points in R^D.
-maxRadius
-stepSize
-numSteps
-    Perseus requires that you decide how many steps, and how wide they are, rather than computing all possible topological changes.  So, persistence will be calculated from parameter 0 until 
-    maxRadius = stepSize*numSteps.
-    Only 2 of the three entries should be passed.  
-    If numSteps and stepSize are passed (regardless of whether maxRadius is passed), they will be used for the computation.  Otherwise, the two non-none valued entries will be used to calculate the third.
-
-suppressOutput
-    If true, gets rid of printed output from perseus.
-
-Outputs
--------
-Dgms
-    A dictionary with integer keys 0,1,...,N 
-    The key gives the dimension of the persistence diagram.\end{DoxyVerb}
- \index{teaspoon\+::\+T\+D\+A\+::\+Persistence@{teaspoon\+::\+T\+D\+A\+::\+Persistence}!V\+R\+\_\+\+Ripser@{V\+R\+\_\+\+Ripser}}
+\begin{DoxyParams}{Parameters}
+{\em P} & An NxD array. Represents N points in R$^\wedge$D. \\
+\hline
+{\em max\+Radius} & \\
+\hline
+{\em step\+Size} & \\
+\hline
+{\em num\+Steps} & Perseus requires that you decide how many steps, and how wide they are, rather than computing all possible topological changes. So, persistence will be calculated from parameter 0 until max\+Radius = step\+Size$\ast$num\+Steps. Only 2 of the three entries should be passed. If num\+Steps and step\+Size are passed (regardless of whether max\+Radius is passed), they will be used for the computation. Otherwise, the two non-\/none valued entries will be used to calculate the third.\\
+\hline
+{\em suppress\+Output} & If true, gets rid of printed output from perseus.\\
+\hline
+\end{DoxyParams}
+\begin{DoxyReturn}{Returns}
+A dictionary with integer keys 0,1,...,N 
+\end{DoxyReturn}
+\index{teaspoon\+::\+T\+D\+A\+::\+Persistence@{teaspoon\+::\+T\+D\+A\+::\+Persistence}!V\+R\+\_\+\+Ripser@{V\+R\+\_\+\+Ripser}}
 \index{V\+R\+\_\+\+Ripser@{V\+R\+\_\+\+Ripser}!teaspoon\+::\+T\+D\+A\+::\+Persistence@{teaspoon\+::\+T\+D\+A\+::\+Persistence}}
 \subsubsection[{\texorpdfstring{V\+R\+\_\+\+Ripser(\+P, max\+Dim=1)}{VR_Ripser(P, maxDim=1)}}]{\setlength{\rightskip}{0pt plus 5cm}def teaspoon.\+T\+D\+A.\+Persistence.\+V\+R\+\_\+\+Ripser (
 \begin{DoxyParamCaption}
@@ -190,62 +188,38 @@ Dgms
 \item[{}]{max\+Dim = {\ttfamily 1}}
 \end{DoxyParamCaption}
 )}\hypertarget{namespaceteaspoon_1_1_t_d_a_1_1_persistence_ae38f90d312da5c7fb8587a2f44e67b8a}{}\label{namespaceteaspoon_1_1_t_d_a_1_1_persistence_ae38f90d312da5c7fb8587a2f44e67b8a}
-\begin{DoxyVerb}Computes persistence up to dimension maxDim using Uli Bauer's Ripser
-Needs to be installed on machine in advance
-https://github.com/Ripser/ripser 
 
 
-Parameters
-----------
-P -
-    A point cloud as an NxD numpy array.
-    N is the number of points, D is the dimension of
-    Euclidean space.
-maxDim -
-    An integer representing the maximum dimension
-    for computing persistent homology
+Computes persistence up to dimension max\+Dim using Uli Bauer\textquotesingle{}s Ripser. 
 
-Returns
--------
-Dgms -  
-    A dictionary where Dgms[k] is a lx2 matrix 
-    giving points in the k-dimensional pers diagram\end{DoxyVerb}
- \index{teaspoon\+::\+T\+D\+A\+::\+Persistence@{teaspoon\+::\+T\+D\+A\+::\+Persistence}!write\+Matrix\+File\+For\+Perseus@{write\+Matrix\+File\+For\+Perseus}}
-\index{write\+Matrix\+File\+For\+Perseus@{write\+Matrix\+File\+For\+Perseus}!teaspoon\+::\+T\+D\+A\+::\+Persistence@{teaspoon\+::\+T\+D\+A\+::\+Persistence}}
-\subsubsection[{\texorpdfstring{write\+Matrix\+File\+For\+Perseus(\+M, filesavename)}{writeMatrixFileForPerseus(M, filesavename)}}]{\setlength{\rightskip}{0pt plus 5cm}def teaspoon.\+T\+D\+A.\+Persistence.\+write\+Matrix\+File\+For\+Perseus (
-\begin{DoxyParamCaption}
-\item[{}]{M, }
-\item[{}]{filesavename}
-\end{DoxyParamCaption}
-)}\hypertarget{namespaceteaspoon_1_1_t_d_a_1_1_persistence_a7ee47776929d1ade75b059415918a328}{}\label{namespaceteaspoon_1_1_t_d_a_1_1_persistence_a7ee47776929d1ade75b059415918a328}
-\begin{DoxyVerb}Given 2D matrix M, write into file format read by Perseus.
-Info on format can be found at: 
-http://people.maths.ox.ac.uk/nanda/perseus/index.html
+\begin{DoxyRemark}{Remarks}
+Ripser needs to be installed on machine in advance \href{https://github.com/Ripser/ripser}{\tt https\+://github.\+com/\+Ripser/ripser}
+\end{DoxyRemark}
 
-TODO: Set this up to work with higher-dimensional cubical complexes
-\end{DoxyVerb}
- \index{teaspoon\+::\+T\+D\+A\+::\+Persistence@{teaspoon\+::\+T\+D\+A\+::\+Persistence}!write\+Point\+Cloud\+File\+For\+Perseus@{write\+Point\+Cloud\+File\+For\+Perseus}}
-\index{write\+Point\+Cloud\+File\+For\+Perseus@{write\+Point\+Cloud\+File\+For\+Perseus}!teaspoon\+::\+T\+D\+A\+::\+Persistence@{teaspoon\+::\+T\+D\+A\+::\+Persistence}}
-\subsubsection[{\texorpdfstring{write\+Point\+Cloud\+File\+For\+Perseus(\+P, filename, step\+Size=.\+1, num\+Steps=500)}{writePointCloudFileForPerseus(P, filename, stepSize=.1, numSteps=500)}}]{\setlength{\rightskip}{0pt plus 5cm}def teaspoon.\+T\+D\+A.\+Persistence.\+write\+Point\+Cloud\+File\+For\+Perseus (
-\begin{DoxyParamCaption}
-\item[{}]{P, }
-\item[{}]{filename, }
-\item[{}]{step\+Size = {\ttfamily .1}, }
-\item[{}]{num\+Steps = {\ttfamily 500}}
-\end{DoxyParamCaption}
-)}\hypertarget{namespaceteaspoon_1_1_t_d_a_1_1_persistence_a074e092c57bca5b1652c7b2a2c41f603}{}\label{namespaceteaspoon_1_1_t_d_a_1_1_persistence_a074e092c57bca5b1652c7b2a2c41f603}
-\begin{DoxyVerb}Writes the point cloud to a file in the perseus format.
+\begin{DoxyParams}{Parameters}
+{\em P} & A point cloud as an NxD numpy array. N is the number of points, D is the dimension of Euclidean space. \\
+\hline
+{\em max\+Dim} & An integer representing the maximum dimension for computing persistent homology\\
+\hline
+\end{DoxyParams}
+\begin{DoxyReturn}{Returns}
+A dictionary Dgms where Dgms\mbox{[}k\mbox{]} is a lx2 matrix giving points in the k-\/dimensional pers diagram 
+\end{DoxyReturn}
 
-Notes:
-    Vidit has options for radius scaling factor. TODO: Figure out if this should be 1 or 2
 
-Parameters
-----------
-P
-    An NxD array.  Represents N points in R^D.
-filename
-    location for saving the file
-stepSize
-numSteps
-    Perseus requires that you decide how many steps, and how wide they are, rather than computing all possible topological changes.  So, persistence will be calculated from parameter 0 until stepSize*numSteps.\end{DoxyVerb}
- 
+\subsection{Variable Documentation}
+\index{teaspoon\+::\+T\+D\+A\+::\+Persistence@{teaspoon\+::\+T\+D\+A\+::\+Persistence}!folders@{folders}}
+\index{folders@{folders}!teaspoon\+::\+T\+D\+A\+::\+Persistence@{teaspoon\+::\+T\+D\+A\+::\+Persistence}}
+\subsubsection[{\texorpdfstring{folders}{folders}}]{\setlength{\rightskip}{0pt plus 5cm}list teaspoon.\+T\+D\+A.\+Persistence.\+folders = \mbox{[}\textquotesingle{}.teaspoon\+Data\textquotesingle{},\textquotesingle{}.teaspoon\+Data/input\textquotesingle{},\textquotesingle{}.teaspoon\+Data/output\textquotesingle{}\mbox{]}}\hypertarget{namespaceteaspoon_1_1_t_d_a_1_1_persistence_a5d89c08933153d3fea60fd71e9e16800}{}\label{namespaceteaspoon_1_1_t_d_a_1_1_persistence_a5d89c08933153d3fea60fd71e9e16800}
+
+
+Checks that necessary folder structure system exists. 
+
+Empties out all previously saved files to avoid confusion. -\/--- Make folders for saving files \index{teaspoon\+::\+T\+D\+A\+::\+Persistence@{teaspoon\+::\+T\+D\+A\+::\+Persistence}!output\+Files@{output\+Files}}
+\index{output\+Files@{output\+Files}!teaspoon\+::\+T\+D\+A\+::\+Persistence@{teaspoon\+::\+T\+D\+A\+::\+Persistence}}
+\subsubsection[{\texorpdfstring{output\+Files}{outputFiles}}]{\setlength{\rightskip}{0pt plus 5cm}list teaspoon.\+T\+D\+A.\+Persistence.\+output\+Files = glob.\+glob(output\+File\+Name + \textquotesingle{}$\ast$\textquotesingle{})}\hypertarget{namespaceteaspoon_1_1_t_d_a_1_1_persistence_ae41c85513e98b32d96c75124929c4d2c}{}\label{namespaceteaspoon_1_1_t_d_a_1_1_persistence_ae41c85513e98b32d96c75124929c4d2c}
+
+
+Reads in the diagrams in the format that Perseus uses. 
+
+Returns a dictionary with integer keys representing the dimension of each diagram. 
