Updates to links in main Readme, some minor cleanup in the documentation

--- a/doc/latex/md_CONTRIBUTING.tex
+++ b/doc/latex/md_CONTRIBUTING.tex
@@ -18,6 +18,22 @@ When you\textquotesingle{}re going to start messing with something, create a bra
 
 Disscussions, comments, and updates can be done on the gitlab merge request page.
 
+\section*{Documentation}
+
+Automatic documentation is being done with \href{www.doxygen.org}{\tt doxygen}. Info to get you started is available in their \href{http://www.stack.nl/~dimitri/doxygen/manual/index.html}{\tt manual}. The config file here is {\ttfamily Doxyfile} in the top level of the folder. So, compiling the documentation should be as easy as running 
+\begin{DoxyCode}
+1 doxygen /path/to/Doxyfile
+\end{DoxyCode}
+ Compiled documentation goes into the {\ttfamily doc} folder. Point your browser to {\ttfamily doc/html/index.\+html} to see the result. Don\textquotesingle{}t forget to refresh your brower after you compile the documentation since most browsers won\textquotesingle{}t automatically update the page for you.
+
+\section*{Before you push}
+
+
+\begin{DoxyItemize}
+\item Have you run doxygen to update the documentation?
+\item Have you incremented the version number?
+\end{DoxyItemize}
+
 \section*{Questions, comments, and other issues}
 
 ...should be sent to \href{mailto:muncheli@msu.edu}{\tt Liz Munch}. 
