--- a/doc/latex/namespaceteaspoon_1_1_t_d_a_1_1_persistence.tex
+++ b/doc/latex/namespaceteaspoon_1_1_t_d_a_1_1_persistence.tex
@@ -94,7 +94,7 @@ Computes persistence for a matrix of function values using Vidit Nanda\textquote
 \end{DoxyItemize}
 \end{DoxyRemark}
 \begin{DoxyRefDesc}{Todo}
-\item[\hyperlink{todo__todo000002}{Todo}]Update this to accept higher dimensional cubical complexes\end{DoxyRefDesc}
+\item[\hyperlink{todo__todo000005}{Todo}]Update this to accept higher dimensional cubical complexes\end{DoxyRefDesc}
 
 
 
@@ -117,7 +117,7 @@ A dictionary with integer keys 0,1,...,N The key gives the dimension of the pers
 \end{DoxyParamCaption}
 )}\hypertarget{namespaceteaspoon_1_1_t_d_a_1_1_persistence_a0660fcd00ca57001f21bfaaefb1da9c3}{}\label{namespaceteaspoon_1_1_t_d_a_1_1_persistence_a0660fcd00ca57001f21bfaaefb1da9c3}
 \begin{DoxyRefDesc}{Todo}
-\item[\hyperlink{todo__todo000001}{Todo}]\end{DoxyRefDesc}
+\item[\hyperlink{todo__todo000004}{Todo}]\end{DoxyRefDesc}
 \index{teaspoon\+::\+T\+D\+A\+::\+Persistence@{teaspoon\+::\+T\+D\+A\+::\+Persistence}!dist\+Mat\+\_\+\+Ripser@{dist\+Mat\+\_\+\+Ripser}}
 \index{dist\+Mat\+\_\+\+Ripser@{dist\+Mat\+\_\+\+Ripser}!teaspoon\+::\+T\+D\+A\+::\+Persistence@{teaspoon\+::\+T\+D\+A\+::\+Persistence}}
 \subsubsection[{\texorpdfstring{dist\+Mat\+\_\+\+Ripser(dist\+Mat, max\+Dim=1)}{distMat_Ripser(distMat, maxDim=1)}}]{\setlength{\rightskip}{0pt plus 5cm}def teaspoon.\+T\+D\+A.\+Persistence.\+dist\+Mat\+\_\+\+Ripser (
@@ -178,7 +178,7 @@ Computes VR persitsence on points in Euclidean space.
 \hline
 \end{DoxyParams}
 \begin{DoxyReturn}{Returns}
-A dictionary with integer keys 0,1,...,N 
+A dictionary with integer keys 0,1,...,N The key gives the dimension of the persistence diagram. 
 \end{DoxyReturn}
 \index{teaspoon\+::\+T\+D\+A\+::\+Persistence@{teaspoon\+::\+T\+D\+A\+::\+Persistence}!V\+R\+\_\+\+Ripser@{V\+R\+\_\+\+Ripser}}
 \index{V\+R\+\_\+\+Ripser@{V\+R\+\_\+\+Ripser}!teaspoon\+::\+T\+D\+A\+::\+Persistence@{teaspoon\+::\+T\+D\+A\+::\+Persistence}}
