--- a/doc/latex/index.tex
+++ b/doc/latex/index.tex
@@ -8,13 +8,21 @@ The code is an compilation of work done by \href{http://www.elizabethmunch.com/m
 \item Brian Bollen
 \end{DoxyItemize}
 
+\section*{Locations }
+
+
+\begin{DoxyItemize}
+\item {\bfseries Code}\+: \href{https://gitlab.msu.edu/TSAwithTDA/teaspoon}{\tt http\+://gitlab.\+msu.\+edu/\+T\+S\+Awith\+T\+D\+A/teaspoon}.
+\item {\bfseries Documentation}\+: \href{http://elizabethmunch.com/math/teaspoon/index.html}{\tt http\+://elizabethmunch.\+com/math/teaspoon/index.\+html}
+\end{DoxyItemize}
+
 \section*{Requirements }
 
 Please note that this code is still pre-\/alpha, so many things are not fully up and running yet.
 
 Bugs reports and feature reqests can be posted on the \href{https://gitlab.msu.edu/TSAwithTDA/teaspoon/issues}{\tt gitlab issues} page.
 
-In order to use all wrappers in teaspoon.\+T\+DA, the following need to be installed so they can be run command line. Note\+: the teaspoon installation will not install or check for their install.
+In order to use all wrappers in teaspoon.\+T\+DA, the following need to be installed so they can be run command line.
 
 
 \begin{DoxyItemize}
@@ -23,11 +31,13 @@ In order to use all wrappers in teaspoon.\+T\+DA, the following need to be insta
 \item \href{https://bitbucket.org/grey_narn/hera}{\tt Hera}. Code by Michael Kerber, Dmitriy Morozov, and Arnur Nigmetov for computing bottleneck and Wasserstein distances.
 \end{DoxyItemize}
 
+Warning\+: the teaspoon installation will not install nor check for the install of these packages. In particular, perseus should be installed so that typing {\ttfamily perseus} runs it, even though some operating systems end up with an executable with a different name.
+
 \section*{Installation }
 
 \subsubsection*{Warning\+:}
 
-This code is still pre-\/alpha. In particular, using the pip install seems to be finicky at best. {\itshape T\+O\+DO\+: Need to find someone who knows more about pip install to fix this up.} {\bfseries If you are having installation issues, please make a note of what you\textquotesingle{}ve done, including copying error message outputs, as a comment into the \href{https://gitlab.msu.edu/TSAwithTDA/teaspoon/issues/1}{\tt installation issue on gitlab} so we can start figuring out what is up with this system.}
+This code is still pre-\/alpha. In particular, using the pip install seems to be finicky at best. If you are having installation issues, please make a note of what you\textquotesingle{}ve done, including copying error message outputs, as a comment into the \href{https://gitlab.msu.edu/TSAwithTDA/teaspoon/issues/1}{\tt installation issue on gitlab} so we can start figuring out what is up with this system.
 
 \subsubsection*{Installing using pip\+:}
 
@@ -35,11 +45,19 @@ As this code is still pre-\/alpha, your best bet is to cd into the folder contai
 
 
 \begin{DoxyCode}
-1 pip install -e .
+1 pip install .
 \end{DoxyCode}
 
 
-This is the developmental installion for pip. When things get more stable, we can remove the -\/e part.
+If you want the developmental installation for pip run 
+\begin{DoxyCode}
+1 pip install -e .
+\end{DoxyCode}
+ When things get more stable, we can remove the -\/e part. If you already have teaspoon installed but want to update to a newer version, run 
+\begin{DoxyCode}
+1 pip install -U .
+\end{DoxyCode}
+
 
 \subsubsection*{Installing using python\+:}
 
