Super minor documentation fix

--- a/doc/latex/index.tex
+++ b/doc/latex/index.tex
@@ -71,7 +71,7 @@ According to the internet, the pip version of install appears to be better. Howe
 
 If the above aren\textquotesingle{}t working, add the following line to your {\ttfamily .bashrc} file. 
 \begin{DoxyCode}
-1 export PYTHONPATH="$\{PYTHONPATH\}:/path/to/teaspoon
+1 export PYTHONPATH="$\{PYTHONPATH\}:/path/to/teaspoon"
 \end{DoxyCode}
 
 
@@ -85,4 +85,4 @@ See the https\+://gitlab.msu.\+edu/\+T\+S\+Awith\+T\+D\+A/teaspoon/blob/master/\
 
 \section*{Contact }
 
-Liz Munch\+: \href{mailto:muncheli@egr.msu.edu}{\tt muncheli@egr.\+msu.\+edu} 
+Liz Munch\+: \href{mailto:muncheli@egr.msu.edu}{\tt muncheli@egr.\+msu.\+edu}. 
