Added tents, build_G, and build_Gm, nothing tested yet

--- a/doc/latex/md_CONTRIBUTING.tex
+++ b/doc/latex/md_CONTRIBUTING.tex
@@ -16,7 +16,7 @@ While I\textquotesingle{}m sure this workflow will change as we go, here are som
 
 When you\textquotesingle{}re going to start messing with something, create a branch for it. This will likely just be done on your local machine. When you think it\textquotesingle{}s ready to be merged into the master branch, go to the merge request page on gilab and submit your merge request.
 
-Disscussions, comments, and updates can be done on the gitlab merge request page.
+Discussions, comments, and updates can be done on the gitlab merge request page.
 
 \section*{Documentation}
 
