--- a/doc/latex/refman.tex
+++ b/doc/latex/refman.tex
@@ -149,11 +149,18 @@
 \input{todo}
 \chapter{Namespace Index}
 \input{namespaces}
+\chapter{Hierarchical Index}
+\input{hierarchy}
+\chapter{Class Index}
+\input{annotated}
 \chapter{Namespace Documentation}
 \input{namespaceteaspoon_1_1_make_data_1_1_point_cloud}
+\input{namespaceteaspoon_1_1_m_l_1_1tents}
 \input{namespaceteaspoon_1_1_t_d_a_1_1_distance}
 \input{namespaceteaspoon_1_1_t_d_a_1_1_draw}
 \input{namespaceteaspoon_1_1_t_d_a_1_1_persistence}
+\chapter{Class Documentation}
+\input{classteaspoon_1_1_m_l_1_1tents_1_1_parameter_bucket}
 %--- End generated contents ---
 
 % Index
