--- a/doc/latex/todo.tex
+++ b/doc/latex/todo.tex
@@ -1,7 +1,13 @@
 
 \begin{DoxyRefList}
+\item[\label{todo__todo000002}%
+\hypertarget{todo__todo000002}{}%
+Member \hyperlink{namespaceteaspoon_1_1_m_l_1_1tents_a86c1ddf6fc99d9e3ab9cc05909983edb}{teaspoon\+:\+:ML\+:\+:tents.build\+\_\+G} (Dgms, d=10, delta=1, epsilon=0, max\+Power=1)]Add figure for parallelogram.  
 \item[\label{todo__todo000001}%
 \hypertarget{todo__todo000001}{}%
+Member \hyperlink{namespaceteaspoon_1_1_m_l_1_1tents_a2656d1f10bf5c93cc9039a2d524c8bfd}{teaspoon\+:\+:ML\+:\+:tents.build\+\_\+\+Gm} (Dgm, d=10, delta=1, epsilon=0, return\+Square=False)]Check for shape output if return\+Square = True.  
+\item[\label{todo__todo000003}%
+\hypertarget{todo__todo000003}{}%
 Member \hyperlink{namespaceteaspoon_1_1_t_d_a_1_1_distance_ad3481b3888962dbf302bacb9d9504e8b}{teaspoon\+:\+:T\+DA\+:\+:Distance.dgm\+Dist\+\_\+\+Hera} (D1, D2, wass\+Deg=\textquotesingle{}Bottleneck\textquotesingle{}, rel\+Error=None, internal\+\_\+p=None)]This documentation needs cleaning and updating.
 
 \+: Does this mean strictly positive? What is the behavior when passing 0? 
@@ -11,10 +17,10 @@ Member \hyperlink{namespaceteaspoon_1_1_t_d_a_1_1_distance_ad3481b3888962dbf302b
 \+: Does this mean strictly positive? What is the behavior when passing 0? 
 
 \+: Check that bottleneck\+\_\+dist uses infinity even though it doesn\textquotesingle{}t explicitly say so in the documentation. 
-\item[\label{todo__todo000005}%
-\hypertarget{todo__todo000005}{}%
+\item[\label{todo__todo000007}%
+\hypertarget{todo__todo000007}{}%
 Member \hyperlink{namespaceteaspoon_1_1_t_d_a_1_1_persistence_aa583aa9a694aeaa3983e77319ac68e84}{teaspoon\+:\+:T\+DA\+:\+:Persistence.Cubical\+\_\+\+Perseus} (M, num\+Digits=2, suppress\+Output=True)]Update this to accept higher dimensional cubical complexes 
-\item[\label{todo__todo000004}%
-\hypertarget{todo__todo000004}{}%
+\item[\label{todo__todo000006}%
+\hypertarget{todo__todo000006}{}%
 Member \hyperlink{namespaceteaspoon_1_1_t_d_a_1_1_persistence_a0660fcd00ca57001f21bfaaefb1da9c3}{teaspoon\+:\+:T\+DA\+:\+:Persistence.dist\+Mat\+\_\+\+Perseus} ()]
 \end{DoxyRefList}
