--- a/doc/latex/todo.tex
+++ b/doc/latex/todo.tex
@@ -2,10 +2,10 @@
 \begin{DoxyRefList}
 \item[\label{todo__todo000002}%
 \hypertarget{todo__todo000002}{}%
-Member \hyperlink{namespaceteaspoon_1_1_m_l_1_1tents_a86c1ddf6fc99d9e3ab9cc05909983edb}{teaspoon\+:\+:ML\+:\+:tents.build\+\_\+G} (Dgms, d=10, delta=1, epsilon=0, max\+Power=1)]Add figure for parallelogram.  
+Member \hyperlink{namespaceteaspoon_1_1_m_l_1_1tents_a19cc99365f3d375bf1ea7535095c15e3}{teaspoon\+:\+:ML\+:\+:tents.build\+\_\+G} (Dgms, d=10, delta=1, epsilon=0, max\+Power=1, feature\+Func=tent)]Add figure for parallelogram.  
 \item[\label{todo__todo000001}%
 \hypertarget{todo__todo000001}{}%
-Member \hyperlink{namespaceteaspoon_1_1_m_l_1_1tents_a2656d1f10bf5c93cc9039a2d524c8bfd}{teaspoon\+:\+:ML\+:\+:tents.build\+\_\+\+Gm} (Dgm, d=10, delta=1, epsilon=0, return\+Square=False)]Check for shape output if return\+Square = True.  
+Member \hyperlink{namespaceteaspoon_1_1_m_l_1_1tents_ac230b402d60eb765d2c2776027afaaa9}{teaspoon\+:\+:ML\+:\+:tents.build\+\_\+\+Gm} (Dgm, d=10, delta=1, epsilon=0, feature\+Func=tent, return\+Square=False)]Check for shape output if return\+Square = True.  
 \item[\label{todo__todo000003}%
 \hypertarget{todo__todo000003}{}%
 Member \hyperlink{namespaceteaspoon_1_1_t_d_a_1_1_distance_ad3481b3888962dbf302bacb9d9504e8b}{teaspoon\+:\+:T\+DA\+:\+:Distance.dgm\+Dist\+\_\+\+Hera} (D1, D2, wass\+Deg=\textquotesingle{}Bottleneck\textquotesingle{}, rel\+Error=None, internal\+\_\+p=None)]This documentation needs cleaning and updating.
